# Rev-python

./: list_comp.py  pharmacies.csv  pyproject.toml  tempCodeRunnerFile.py  tuple_my.py
